# NuoYi

./: AGENTS.md  BATCH_SIZE_1_MODE.md  CHANGELOG.md  CPU_FIRST_MEMORY_MANAGEMENT.md  EXISTING_FILES_FEATURE.md  FILENAME_MATCHING_LOGIC.md  FIX_OOM_GUIDE.md  GPU_CPU_FALLBACK.md  GUI_EXISTING_FILES.md  GUI_EXISTING_FILES_FIX.md  MARKER_MEMORY_ANALYSIS.md  MARKER_OPTIMIZATION_COMPLETE.md  MARKER_OPTIMIZATION_PATCH.md  MEMORY_FIX.md  MEMORY_IMPROVEMENT.md  MEMORY_MANAGEMENT.md  OCR_ISSUE_ANALYSIS.md  OOM_EMERGENCY_FIX.md  OPTIMIZED_EXISTING_FILES.md  QUICK_FIX_OOM.md  README.md  README_CN.md  RECURSIVE_FEATURE.md  RECURSIVE_FEATURE_COMPLETE.md  WORKING_COMMAND.md  auto_convert.py  batch_convert_arxiv.py  d.sh  demo_recursive.py  do.sh  publish.bat  publish.sh  pyproject.toml  requirements.txt  switch_gpu.sh  test.sh  test_cloud_convert.py  test_e2e_recursive.sh  test_final_verification.py  test_gui_recursive.py  (+4 more)
images/: nuoyi_help.txt
papers/: paper.md  paper_doc2x.md
papers/.clap_chroma/: chroma.sqlite3
src/nuoyi/: __init__.py  __main__.py  api.py  cli.py  converter.py  gui.py  tools.py  utils.py  web.py
tests/: __init__.py  test_basic.py  test_existing_files.py  test_memory_management.py  test_recursive.py  test_unified_api.py
